--- a/snack 4/index.html
+++ b/snack 4/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="result"></div>
+    <div class="table-container">
+        <ul>
+            <li>Name</li>
+            <li>Surname</li>
+            <li>Age</li>
+            <li>Description</li>
+        </ul>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
